--- a/index.html
+++ b/index.html
@@ -33,33 +33,37 @@
       <div class="grid">
         <div class="card" data-modal="ugsrContinuousMiner">
           <h3>UGSR Continuous Miner Simulator</h3>
-          <p>Underground hard rock simulator experience focused on continuous miner operation and training.</p>
-          <p class="meta">Unity, Simulation, Training</p>
+          <p>Underground soft rock simulator experience focused on continuous miner operation and training.</p>
+          <p class="meta">Unity, Simulation, Training, Hardware Intergration</p>
         </div>
 
         <div class="card" data-modal="ugsrBatteryHauler">
           <h3>UGSR Battery Hauler Simulator</h3>
-          <p>Simulator experience centered on battery hauler workflows and operator training scenarios.</p>
-          <p class="meta">Unity, Simulation, Training</p>
+          <p>Underground soft rock simulator experience centered on battery hauler operator training scenarios.</p>
+          <p class="meta">Unity, Simulation, Training, Hardware Intergration</p>
         </div>
 
         <div class="card" data-modal="projectGoldMiner">
           <h3>Project Gold Miner (Exploratory Mobile Game)</h3>
-          <p>Exploratory prototype investigating mobile gameplay loops and rapid iteration on core mechanics.</p>
-          <p class="meta">Unity, Mobile, Prototyping</p>
+          <p>Exploratory prototype investigating mobile gameplay to gamify high-level mining concepts.</p>
+          <p class="meta">Unity, Mobile, Prototyping, Gamification</p>
         </div>
       </div>
     </section>
 
     <section aria-labelledby="personal-projects">
+      <h2 id="personal-projects">Interactive Virtual Experiences</h2>      
+        <p>
+          Interactive Virtual Experiences (IVE) was an exploratory partnership founded by my brother and me to prototype and evaluate interactive software ideas. While none of the concepts moved forward into production, the resulting prototypes were retained and are now showcased as personal projects. These can be found on the IVE website.
+        </p>
+        <p>
+          <a href="https://interactivevirtualexperiences.com/" target="_blank" rel="noopener">Interactive Virtual Experiences</a>
+        </p>
+      </div>
+    </section>
+    
+    <section aria-labelledby="personal-projects">
       <h2 id="personal-projects">Personal Projects</h2>
-
-      <div class="grid">
-        <div class="card" data-modal="asicWorkbench">
-          <h3>ASIC Workbench</h3>
-          <p>Personal tooling and experiments around workflows, data, and rapid iteration.</p>
-          <p class="meta">Tools, Prototyping</p>
-        </div>
 
         <div class="card" data-modal="questBoard">
           <h3>QuestBoard</h3>
