Update project descriptions and metadata in index.html
Updating project description and meta data.

--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
 
         <div class="card" data-modal="questBoard">
           <h3>QuestBoard</h3>
-          <p>A project focused on organizing tasks, progression, and goal-driven structure.</p>
-          <p class="meta">Productivity, App</p>
+          <p>A project focused on creating a back-end API interacting with a Unity WebGL front-end.</p>
+          <p class="meta">Unity, API Dev, WebApp, WebGL, Firebase</p>
         </div>
 
         <div class="card" data-modal="siteScout">
           <h3>SiteScout</h3>
           <p>A lightweight project exploring discovery, tracking, and presentation of site or content signals.</p>
-          <p class="meta">Web, Utility</p>
+          <p class="meta">Python, AI, Google Places, WebApp, Utility</p>
         </div>
 
         <div class="card" data-modal="flaskEmotionAI">
           <h3>Flask Emotion Detection AI</h3>
           <p>A Flask-based experiment for emotion detection, inference, and simple web presentation.</p>
-          <p class="meta">Python, Flask, ML</p>
+          <p class="meta">Python, Flask, AI, WatsonX</p>
         </div>
       </div>
     </section>
