Revise project details in index.html
Updated project descriptions and metadata for clarity.

--- a/index.html
+++ b/index.html
@@ -65,22 +65,28 @@
     <section aria-labelledby="personal-projects">
       <h2 id="personal-projects">Personal Projects</h2>
 
+        <div class="card" data-modal="asicWorkbench">
+          <h3>IVE - ASIC Workbench</h3>
+          <p>A WebGL-based interactive training tool prototype for the Crypto-Currency market.</p>
+          <p class="meta">Unity, WebGL, Training Tool, Prototype</p>
+        </div>
+      
         <div class="card" data-modal="questBoard">
           <h3>QuestBoard</h3>
           <p>A project focused on creating a back-end API interacting with a Unity WebGL front-end.</p>
-          <p class="meta">Unity, API Dev, WebApp, WebGL, Firebase</p>
+          <p class="meta">Unity, API Backend, Learning Project</p>
         </div>
 
         <div class="card" data-modal="siteScout">
           <h3>SiteScout</h3>
           <p>A lightweight project exploring discovery, tracking, and presentation of site or content signals.</p>
-          <p class="meta">Python, AI, Google Places, WebApp, Utility</p>
+          <p class="meta">Python, Edge AI, WebApp, Learning Project</p>
         </div>
 
         <div class="card" data-modal="flaskEmotionAI">
           <h3>Flask Emotion Detection AI</h3>
           <p>A Flask-based experiment for emotion detection, inference, and simple web presentation.</p>
-          <p class="meta">Python, Flask, AI, WatsonX</p>
+          <p class="meta">Python, Flask, WatsonX AI, Learning Project</p>
         </div>
       </div>
     </section>
@@ -133,9 +139,9 @@
 
   <!-- Personal project modal templates -->
   <template id="asicWorkbench">
-    <h3 id="modalTitle">ASIC Workbench</h3>
+    <h3 id="modalTitle">IVE - ASIC Workbench</h3>
     <p>
-      Personal project focused on building practical tooling and experiments that support rapid iteration and repeatable workflows.
+      This project is a demonstration version of a potential WebGL-based interactive training tool, designed to showcase how technicians can be trained to properly remove and replace components on an ASIC cryptocurrency miner.
     </p>
     <p class="meta">Tools, Prototyping</p>
     <p>
