Add video element for ProMiner project
Added a video element for showcasing the ProMiner video.

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
       Work project showcased using only publicly available material. This simulator focused on operator training and workflow simulation
       for continuous miner operation in an underground setting.
     </p>
+    <p>
+    <video controls width="800">
+      <source src="https://github.com/THET0305/thet0305.github.io/blob/main/video/ProMinerVideo_1.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    </p>
     <p class="meta">Unity, Simulation, Training</p>
     <p>
       <a href="#" target="_blank" rel="noopener">Public reference link (add)</a>
