--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       for continuous miner operation in an underground setting.
     </p>
     <p>
-    <video controls width="800">
-      <source src="https://github.com/THET0305/thet0305.github.io/blob/main/video/ProMinerVideo_1.mp4" type="video/mp4">
+    <video autoplay playsinline>
+      <source src="video/ProMinerVideo_1.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
     </p>
