--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       for continuous miner operation in an underground setting.
     </p>
     <div class="modal-content">
-      <video playsinline>
+      <video>
         <source src="video/ProMinerVideo_1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
