--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       for continuous miner operation in an underground setting.
     </p>
     <div class="modal-content">
-      <video>
+      <video controls>
         <source src="video/ProMinerVideo_1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -126,7 +126,7 @@
       operational workflows, with an emphasis on usability and repeatable training outcomes.
     </p>
     <div class="modal-content">
-      <video>
+      <video controls>
         <source src="video/BHSimulatorProject.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -144,7 +144,7 @@
       may not be publicly available beyond high-level references.
     </p>
     <div class="modal-content">
-      <video>
+      <video controls>
         <source src="video/ProjectGoldMinerDemo_1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
