Refactor intro paragraph for clarity

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <p class="subtitle">Unity / Full Stack - Personal projects and notes.</p>
 
     <p class="intro">
-      <strong>Hi, this is my project portfolio.</strong><br>
-      It showcases videos of shipped work projects alongside links to personal and experimental builds.<br>
-      I have worked extensively with emerging technologies, where rapid prototyping, iteration, and problem-solving under uncertainty are core to the process.<br>
+      Hi, this is my project portfolio. It showcases videos of shipped work projects alongside links to personal and experimental builds. I have worked extensively with emerging technologies, where rapid prototyping, iteration, and problem-solving under uncertainty are core to the process.
       A homeschooler through and through, I learn best by applying concepts directly in real systems.
     </p>
   </header>
