Modify disclaimer in Joy/Komatsu Projects section
Updated disclaimer text to emphasize the nature of the projects.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <h2 id="joy-komatsu-projects">Joy/Komatsu Projects</h2>
 
       <p class="disclaimer">
-        Disclaimer: This section only includes material that can be found publicly. I do not claim ownership or rights to these projects.
+        <i>Disclaimer: This section only includes material that can be found publicly. I do not claim ownership or rights to these projects.
         This work is shown solely to showcase projects I have contributed to. Some items were prototypes or exploratory efforts that were
-        shelved and are not publicly available.
+        shelved and are not publicly available.</i>
       </p>
 
       <div class="grid">
