Update GitHub link in SiteScout template

--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
 
   <template id="questBoard">
     <h3 id="modalTitle">QuestBoard</h3>
+    <div class="modal-content">
+      <img src="images/Screenshot 2026-02-04 152858.png" alt="Example screenshot" />
+    </div>
     <p>
       This project is a learning project on using REST API's in Unity. Part of this project is creating and hosting a mock API backend and part Unity development for interacting with the mock backend. 
     </p>
@@ -182,17 +185,23 @@
 
   <template id="siteScout">
     <h3 id="modalTitle">SiteScout</h3>
+    <div class="modal-content">
+      <img src="images/ASIC_Workbench.png" alt="Example screenshot" />
+    </div>
     <p>
       Personal utility project exploring discovery, tracking, and presentation of site or content signals in a simple, maintainable way.
     </p>
     <p class="meta">Web, Utility</p>
     <p>
-      <a href="https://github.com/YOUR_USERNAME/SiteScout" target="_blank" rel="noopener">View on GitHub</a>
+      <a href="https://github.com/THET0305/site-scout-public" target="_blank" rel="noopener">View on GitHub</a>
     </p>
   </template>
 
   <template id="flaskEmotionAI">
     <h3 id="modalTitle">Flask Emotion Detection AI</h3>
+    <div class="modal-content">
+      <img src="images/EmotionDetection.png" alt="Example screenshot" />
+    </div>
     <p>
       Flask-based experiment that wraps an emotion detection model behind a small web UI for simple inference and testing workflows.
     </p>
