Add bug note for Unity interface in QuestBoard section
Added a note about a bug in the Unity interface related to quest state text not updating.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
           <h3>QuestBoard</h3>
           <p>A project focused on creating a back-end API interacting with a Unity WebGL front-end.</p>
           <p class="meta">Unity, API Backend, Learning Project</p>
+        <p><i><u>IMPORTANT (2026): The unity interface has a bug where the UI isn't updating the quest state text. Everything else works though. When I get time, I will fix this.</u></i></p>
         </div>
 
         <div class="card" data-modal="siteScout">
