Revise Unity bug notice and update SiteScout image
Updated the important notice regarding the Unity interface bug for clarity and fixed the image source for SiteScout.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h3>QuestBoard</h3>
           <p>A project focused on creating a back-end API interacting with a Unity WebGL front-end.</p>
           <p class="meta">Unity, API Backend, Learning Project</p>
-        <p><i><u>IMPORTANT (2026): The unity interface has a bug where the UI isn't updating the quest state text. Everything else works though. When I get time, I will fix this.</u></i></p>
+        <p><i><u>Important (2026): There is a known issue in the Unity interface where the quest state text does not update correctly. All other quest functionality works as expected. This will be addressed when time permits.</u></i></p>
         </div>
 
         <div class="card" data-modal="siteScout">
@@ -187,7 +187,7 @@
   <template id="siteScout">
     <h3 id="modalTitle">SiteScout</h3>
     <div class="modal-content">
-      <img src="images/ASIC_Workbench.png" alt="Example screenshot" />
+      <img src="images/SiteScout.png" alt="Example screenshot" />
     </div>
     <p>
       Personal utility project exploring discovery, tracking, and presentation of site or content signals in a simple, maintainable way.
