Revise project description for Gold Miner
Updated project description to include details about mobile development experience and project goals.

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
   <template id="projectGoldMiner">
     <h3 id="modalTitle">Project Gold Miner (Exploratory Mobile Game)</h3>
     <p>
-      Exploratory prototype created to test mobile gameplay loops and validate mechanics quickly. This was an internal exploration and
-      may not be publicly available beyond high-level references.
+      <p>This project was an opportunity for me to explore mobile development while getting hands-on experience with Unity’s Data-Oriented Technology Stack (DOTS) and Entity Component System (ECS).</p>
+      <p>Built for Android and UWP, the project was designed for an audience with little to no background in underground mining. Its goal was to introduce high-level concepts of Continuous Miner operation, while also incorporating light mine and resource management elements to reinforce learning through interaction.</p>
+      <p>Project Year: 2019</p>
     </p>
     <div class="modal-content">
       <video controls>
