Update project descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -103,8 +103,9 @@
   <template id="ugsrContinuousMiner">
     <h3 id="modalTitle">UGSR Continuous Miner Simulator</h3>
     <p>
-      Work project showcased using only publicly available material. This simulator focused on operator training and workflow simulation
-      for continuous miner operation in an underground setting.
+      <p>The ProMiner Operator Training Simulator was my first Unity3D project. Released in South Africa in 2009, it was created to help address illiteracy challenges in technical training. Since then, the simulator has gained customers worldwide and has also been used extensively as a marketing tool at industry trade shows.</p>
+      <p>As a founding—and ultimately the final—member of the original development team, I have worked across every aspect of the project over the years, contributing to its long-term growth, maintenance, and evolution.</p>
+      <p><b>Project Year: 2009 - Present</b></p>
     </p>
     <div class="modal-content">
       <video controls>
@@ -121,8 +122,9 @@
   <template id="ugsrBatteryHauler">
     <h3 id="modalTitle">UGSR Battery Hauler Simulator</h3>
     <p>
-      Work project showcased using only publicly available material. This simulator focused on battery hauler training scenarios and
-      operational workflows, with an emphasis on usability and repeatable training outcomes.
+      <p>Kicked off in 2020, this training simulator began as a rapid prototype that combined a gaming joystick, pedals, and a VR headset within a virtual underground environment, allowing trainees to learn how to operate a Komatsu battery-powered hauler. The prototype was completed in three months and successfully secured management buy-in, leading to its transition into a full production project.</p>
+      <p>I served as the primary developer throughout the project’s evolution, leading development across programming, systems design, 2D art, 3D modeling, audio, and UX. During a short phase of the project, I also worked alongside and mentored a junior developer before returning to primary ownership. As the simulator moved into full production, it was expanded to include a full physical frame, integration with real machine hardware, hand motion tracking, and ongoing feature development.</p>
+      <p><b>Project Year: 2009 - Present</b></p>
     </p>
     <div class="modal-content">
       <video controls>
@@ -141,7 +143,7 @@
     <p>
       <p>This project was an opportunity for me to explore mobile development while getting hands-on experience with Unity’s Data-Oriented Technology Stack (DOTS) and Entity Component System (ECS).</p>
       <p>Built for Android and UWP, the project was designed for an audience with little to no background in underground mining. Its goal was to introduce high-level concepts of Continuous Miner operation, while also incorporating light mine and resource management elements to reinforce learning through interaction.</p>
-      <p>Project Year: 2019</p>
+      <p><b>Project Year: 2019</b></p>
     </p>
     <div class="modal-content">
       <video controls>
