--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
     <div class="modal-content">
       <img src="images/ASIC_Workbench.png" alt="Example screenshot" />
     </div>
-    <p>
-      This project is a demonstration version of a potential WebGL-based interactive training tool, designed to showcase how technicians can be trained to properly remove and replace components on an ASIC cryptocurrency miner.
-    </p>
+      <p>The ASIC Workbench Interactive Training Tool Demo is a WebGL-based proof of concept designed to demonstrate how interactive 3D content can be used to train technicians on hardware teardown and maintenance procedures. Built as a lightweight, browser-based experience, the demo showcases the potential for a larger, fully featured training platform.</p>
+      <p>In its current state, the project focuses on the guided removal of a single cooling fan from an Antminer S9. Users can inspect and interact with the 3D model while following a step-by-step PDF guide that is embedded directly into the interface and dynamically highlights the current procedure step. The demo was created to clearly communicate the concept to stakeholders and illustrate how the system could scale into a complete, interactive training solution.</p>
+      <p><b>Project Year: 2024</b></p>
     <p class="meta">Tools, Prototyping</p>
     <p>
       <a href="https://github.com/THET0305/ive_antminer_work_bench" target="_blank" rel="noopener">View on GitHub</a>
@@ -169,9 +169,9 @@
     <div class="modal-content">
       <img src="images/Screenshot 2026-02-04 152858.png" alt="Example screenshot" />
     </div>
-    <p>
-      This project is a learning project on using REST API's in Unity. Part of this project is creating and hosting a mock API backend and part Unity development for interacting with the mock backend. 
-    </p>
+      <p>This project is a hands-on learning exercise focused on integrating REST APIs with Unity. It involved both building and hosting a mock backend API and developing a Unity front end to interact with it, with the project also serving as a portfolio piece.</p>
+      <p>The backend was implemented as a mock REST API using serverless functions to relay requests to a Firebase database, where quest data is stored and updated via standard HTTP methods. On the front end, a Unity-based UI retrieves quest information, displays it to the user, and allows quests to be accepted or dropped, updating their status through API calls. Development was intentionally split across different environments and tools to better mirror real-world workflows, and the project continues to serve as a practical reference for API-driven UI patterns in Unity.</p>
+      <p><b>Project Year: 2025</b></p>
     <p class="meta">Unity, API Dev, WebApp, WebGL, Firebase</p>
     <p>
       <a href="https://github.com/THET0305/QuestBoard-REST" target="_blank" rel="noopener">View on GitHub</a>
@@ -186,9 +186,9 @@
         Your browser does not support the video tag.
       </video>
     </div>
-    <p>
-      Personal utility project exploring discovery, tracking, and presentation of site or content signals in a simple, maintainable way.
-    </p>
+      <p>SiteScout is a personal, agentic AI-powered lead generation project designed to turn cold outreach into data-backed, visual, and persuasive sales conversations. Built with web developers and agencies in mind, it goes beyond basic lead discovery by automatically auditing business websites, identifying technical and visual issues, and generating tailored redesign pitches.</p>
+      <p>The system combines live business discovery, automated site capture, heuristic analysis, and AI-driven visual evaluation within a bounded reasoning loop. It gathers real evidence—HTML structure and full-page screenshots—scores sites based on modernization signals, and produces professional, non-aggressive outreach copy grounded in those findings. SiteScout is engineered to be fast, ethical, and respectful, with built-in rate limiting, concurrency controls, and strict adherence to robots.txt.</p>
+      <p><b>Project Year: 2025</b></p>
     <p class="meta">Web, Utility</p>
     <p>
       <a href="https://github.com/THET0305/site-scout-public" target="_blank" rel="noopener">View on GitHub</a>
@@ -200,9 +200,9 @@
     <div class="modal-content">
       <img src="images/EmotionDetection.png" alt="Example screenshot" />
     </div>
-    <p>
-      Flask-based experiment that wraps an emotion detection model behind a small web UI for simple inference and testing workflows.
-    </p>
+      <p>This project was completed as one of the final assignments in the Coursera / IBM AI Developer Professional Certificate program and takes the form of a lightweight Flask-based web application for AI-driven emotion detection.</p>
+      <p>The original project scaffolding—HTML and JavaScript structure—was provided by the Coursera / IBM team. I extended the application by updating the front-end to include visual image and emoticon-based responses in addition to text output, implementing the Flask backend, and configuring the WatsonX Emotion service for API-based emotion classification. The project is hosted as a live demo and serves as a practical example of integrating cloud-based AI services into a simple web application.</p>
+      <p><b>Project Year: 2025</b></p>
     <p class="meta">Python, Flask, ML</p>
     <p>
       <a href="https://github.com/THET0305/emotion_detection_flask" target="_blank" rel="noopener">View on GitHub</a>
